--- a/estilo.css
+++ b/estilo.css
@@ -13,7 +13,7 @@ header{
   }
 h1{
     margin-top: 100px;
-    margin-bottom: 150px;
+    margin-bottom: 15px;
     margin-left: 100px;
     margin-right: 100px;
     text-align: center;
@@ -22,14 +22,14 @@ h1{
 }
 h2{
     margin-top: 100px;
-    margin-bottom: 150px;
+    margin-bottom: 10px;
     margin-left: 100px;
     margin-right: 100px;
 
 }
 p{
-    margin-top: 100px;
-    margin-bottom: 150px;
+    margin-top: 10px;
+    margin-bottom: 1px;
     margin-left: 100px;
     margin-right: 100px;
     text-align: justify;
@@ -37,3 +37,116 @@ p{
    
 }
 
+ul{
+    margin-top: 40px;
+    margin-bottom: 15px;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: justify;
+    font-family: 'UbuntuMono-Bold.ttf',cursive;
+
+
+}
+
+footer{
+    background-color: rgb(33, 82, 216);
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-bottom: 10px;
+    margin-top: 2px;
+}
+.botao{
+    margin: 1%;
+    width: 70px;
+    height: 20px;
+    padding: 2%;
+    background-color: black;
+    margin: auto;
+    border-radius: 20px
+  }
+  
+  .botao:hover{
+    background-color:#000000;
+  }
+  
+  .botao a:link, .botao a:visited{
+    color:#ffffff;
+    text-decoration: none;
+    font-weight: bolder;
+  }
+  
+  .botao p{
+    text-align: center;
+  }
+  footer p {
+    text-align: center;
+    font-size: 1em;
+  }
+  menu{
+
+
+  }
+  li {
+    float: l
+    eft;
+    border-right:1px solid #bbb;
+  }
+  
+  li:last-child {
+    border-right: none;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #111;
+  }
+  
+  .active {
+    background-color: #04AA6D;}
+    .img_logo{
+        width: 30%;
+    }
+    
+    .logo{
+        width: 30%;
+        text-align: left;
+    }
+    
+    .banner{
+      margin-top: 10%;
+      
+    }
+    .img_logo{
+        width: 30%;
+    }
+    
+    .logo{
+        width: 30%;
+        text-align: left;
+        margin-left: 10px;
+    }
+    
+    .banner{
+      margin-top: 10%;
+    }
+    
+        img{
+            text-align: center;
+            margin-left: 700px;
+        }
+        .esquerda{
+            float: center;
+            margin-left: 2%;
+            margin-right: 2%;
+            margin-top: 2%;
+            margin-bottom: 2%;
+            width: 50%;
+          }
+          
